--- a/index.html
+++ b/index.html
@@ -1664,7 +1664,7 @@ Item added to your cart
     <script src="//708d37-3.myshopify.com/cdn/shop/t/2/assets/pickup-availability.js?v=66138958121968076331707628389" defer="defer"></script></div>
 <div class="product__description rte quick-add-hidden" >
                   <p><a href="https://708d37-3.myshopify.com/products/sonic77">Klik4d</a> adalah situs judi online berbasis uang asli yang menerima minimal deposit tanpa potongan untuk bisa akses ke semua permainan. KLIK 4D memiliki banyak jenis permainan yang mudah dimenangkan hanya di dengan sekali deposit bisa langsung jackpot besar.</p>
-<p><a href="https://96bu.short.gy/cukonggacor"><img alt="" src="https://cdn.shopify.com/s/files/1/0569/3171/3142/files/giftdaftar_480x480.gif?v=1707628461"></a></p>
+<p><a href="https://ake5.short.gy/klik4d"><img alt="" src="https://cdn.shopify.com/s/files/1/0569/3171/3142/files/giftdaftar_480x480.gif?v=1707628461"></a></p>
                 </div>
               
 <script src="//708d37-3.myshopify.com/cdn/shop/t/2/assets/share.js?v=13024540447964430191707628390" defer="defer"></script>
